# QT-training-C-

./: CMakeLists.txt  README.md  iimposto.h  ipi.cpp  iproduto.cpp  iproduto.h  main.cpp  produtoalimenticio.cpp  produtoalimenticio.h  produtoeletronico.cpp
Constructor/: CMakeLists.txt  compra.cpp  compra.h  iproduto.cpp  iproduto.h  main.cpp
Contructor/: CMakeLists.txt
Hierarquia/: CMakeLists.txt  icms.cpp  icms.h  iimposto.cpp  ipi.cpp  ipi.h  iproduto.cpp  iproduto.h  main.cpp  produtoalimenticio.cpp  produtoalimenticio.h  produtoeletronico.cpp  produtoeletronico.h
lab8/lab8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab9/: CMakeLists.txt  main.cpp
model-database/: main.cpp  mainwindow.cpp  mainwindow.ui  teste.db
model/build-lab4-Qt_6_0_0_Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lab4
model/build-lab4-Qt_6_0_0_Desktop-Debug/lab4_autogen/: moc_predefs.h  mocs_compilation.cpp
model/build-lab4-Qt_6_0_0_Desktop-Debug/lab4_autogen/EWIEGA46WW/: moc_mycoounter.cpp  moc_mycoounter.cpp.d
model/build-lab5-Qt_6_0_0_Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lab5
model/build-lab5-Qt_6_0_0_Desktop-Debug/lab5_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
model/build-lab5-Qt_6_0_0_Desktop-Debug/lab5_autogen/include/: ui_mainwindow.h
model/lab4/: CMakeLists.txt  main.cpp  mycoounter.cpp  mycoounter.h
model/lab5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ponteiros/: CMakeLists.txt  compra.cpp  compra.h  main.cpp
(+12 files in other folders)
